--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           This project was coded by
           <a href="https://github.com/EmilyWangah" target="_blank">Emily Batubaja</a> and is
           <a href="https://github.com/EmilyWangah/Emily-Weather-app" target="_blank">open-sourced on GitHub</a> and
-          <a href="https://cheery-buttercream-b387c3.netlify.app/" target="_blank">hosted on Netlify</a>
+          <a href="https://emilyweather-app.netlify.app/" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
